2005-09-11  Sven Panne  <sven.panne@aedion.de>

	* src/alutError.c: Print a message to stderr when an error
	condition is set and the ALUT_DEBUG environment variable is
	defined.

	* src/Makefile.am: Include src/helloworld.wav and src/README in
	distributions.

	* src/README: A few additions and corrections.

	* doc/alut.html: A few clarifications and a little reformatting.

2005-09-10  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, doc/alut.html, examples/hello_world.c,
	include/AL/alut.h, src/Makefile.am, src/alutUtil.c,
	test_suite/test_fileloader.c, test_suite/test_memoryloader.c,
	test_suite/test_retrostuff.c, test_suite/test_waveforms.c: Added
	alutMicroSleep and use it.

	* include/AL/alut.h: Renamed ALUTAPI/ALUTAPIENTRY to
	ALUT_API/ALUT_APIENTRY, so we only #define macros with the ALUT_
	prefix.

	* doc/alut.html, include/AL/alut.h, src/alutLoader.c,
	src/alutWaveform.c, test_suite/test_retrostuff.c: Frequencies are
	ALfloat again.

	* doc/alut.html: Mention openal-config and pkg-config. Reformatted
	a bit.
	
	* doc/alut.css: The body should have the same font-family as the
	headers.

2005-09-09  Sven Panne  <sven.panne@aedion.de>

	* src/Makefile.am: Added libm dependencies.

	* configure.ac, include/AL/alut.h, admin/alut.dsp: Consistently
	use _ALUTLIB when building the ALUT DLL.

	* configure.ac, include/Makefile.am: Install header directly from
	include subdirectory, it is more logical this way.

	* include/AL/Makefile.am: Removed.

	* configure.ac, src/Makefile.am, examples/Makefile.am,
	test_suite/Makefile.am: Hardwire the library name, that kind of
	flexibility is not needed as it would break the ABI.

	* Makefile.am: Added rule to update libtool.

	* configure.ac: Don't change the default prefix (principle of
	least surprise). The alut library should be able to be used by
	dlopen, it doesn't use dlopen (yet). Removed obscure includedir
	adjustment, it is not needed. Removed dead code. Improved logic to